<resources>
    <string name="app_name">CDK 4/6 Нежелательные явления</string>
    <string name="tab_calendar">Календарь</string>
    <string name="title_calendar">Календарь</string>
    <string name="tab_patients">Пациенты</string>
    <string name="title_patients">Пациенты</string>
    <string name="tab_preparat">Препарат</string>
    <string name="title_preparat">Информация о препарате</string>
    <string name="tab_more">Еще</string>
    <string name="title_more">Профиль пользователя</string>
    <string name="warning">Внимание</string>
    <string name="doctors_only">Приложение предназначено только для медицинских работников и имеет ознакомительный характер. Лечение пациента каждый врач проводит индивидуально.</string>
    <string name="disclaimer1">Используя данное приложение, вы принимаете</string>
    <string name="disclaimer2">Пользовательское соглашение</string>
    <string name="i_am_a_doctor">Да, я врач!</string>
    <string name="i_am_not_a_doctor">Я не врач</string>
    <string name="hello1">Здравствуйте!</string>
    <string name="hello2">Авторизуйтесь, чтобы начать работу в приложении.</string>
    <string name="not_registered">Еще не зарегистрированы?</string>
    <string name="register">Присоединиться</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login">Войти</string>
    <string name="register_title">Регистрация аккаунта</string>
    <string name="register_action">Зарегистрироваться</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="name">Имя</string>
    <string name="user_data">ИНФОРМАЦИЯ О ПОЛЬЗОВАТЕЛЕ</string>
    <string name="fio">ФИО</string>
    <string name="notification_data">УВЕДОМЛЕНИЯ</string>
    <string name="oak_ready">Готовность ОАК (дней)</string>
    <string name="push">Push-уведомления</string>
    <string name="logout">Выход</string>
    <string name="mockdate_data">УПРАВЛЕНИЕ ДАТОЙ</string>
    <string name="mockdate">Принудительная дата</string>
    <string name="date_of_make_oak">Дата сдачи ОАК</string>
    <string name="how_many_days_make">Сколько дней делается</string>
    <string name="appoint_oak">НАЗНАЧИТЬ ОАК</string>
    <string name="mockdate_system">(системная)</string>
    <string name="reset_mockdate">Сбросить дату на системную</string>
    <string name="add_patient_title">Добавление пациента</string>
    <string name="general_data">ОБЩАЯ ИНФОРМАЦИЯ</string>
    <string name="was_hormonal_therapy">Была гормональная терапия</string>
    <string name="was_background_therapy">Фоновая терапия</string>
    <string name="menopause">Менопауза</string>
    <string name="add_patient">Добавить пациента</string>
    <string name="patient_card_title">Карточка пациента</string>
    <string name="patient_photo">Фотография пациента</string>
    <string name="appointment_title">Мониторинг приема</string>
    <string name="oak_data">Данные ОАК</string>
    <string name="leukocytes">Лейкоциты</string>
    <string name="neutrophils">Нейтрофилы</string>
    <string name="neutrophils_percent">Нейтрофилы (%)</string>
    <string name="platelets">Тромбоциты</string>
    <string name="erythrocytes">Эритроциты</string>
    <string name="hemoglobin">Гемоглобин</string>
    <string name="save_oak">Сохранить результаты</string>
    <string name="treatment_not_started">Прием препарата не начат</string>
    <string name="save_patient_title">Редактирование пациента</string>
    <string name="fever">Лихорадка</string>
    <string name="assign_next_oak">Результаты анализов не позволяют начать лечение</string>
    <string name="assign_continue_date">Определить длительность перерыва</string>
    <string name="next_treatment_date">Дата следующего приема</string>
    <string name="continue_date">Дата возобновления</string>
    <string name="consider_lowering_dose">Рассмотреть снижение дозы</string>
    <string name="select_date">Выберите дату</string>
    <string name="dose_was_reduced">Доза приема препарата была уменьшена</string>
    <string name="healing">Лечение</string>
    <string name="start_healing">Назначить лечение</string>
    <string name="today_day_of_admission">Сегодня день приема пациента</string>
    <string name="recommendation_of_using">Рекомендации по приёму препарата</string>
    <string name="history_of_admission">История приема препарата</string>
    <string name="last_oak_result">Результат последнего ОАК</string>
    <string name="cycle_oak_card">Цикл %1$d</string>
    <string name="cycle_day_of_oak">Сегодня %1$d-й день %2$d-го цикла</string>
    <string name="patient_drugs_day_count">День %1$d-й</string>
    <string name="start_drugs">начало приема препарата</string>
    <string name="only_for_doctor">Это приложение только для врачей</string>
    <string name="work_in_progress">Мы работаем над приложением\nдля пациентов</string>
    <string name="app_ok">Ок</string>
    <string name="no">Нет</string>
    <string name="delete">Удалить профиль</string>
    <string name="set_greid">Задать грейд</string>
    <string name="find_by_oak">Определить по ОАК</string>
    <string name="current_admission">ТЕКУЩИЙ ПРИЕМ</string>
    <string name="grade_count">Грейд %1$d</string>
    <string name="neutrophils_count_for_grade">Нейтрофилы %1$d/мл</string>
    <string name="last_result">Результат предыдущего приема</string>
    <string name="common_intoxication">Общая интоксикация</string>
    <string name="neutrophils_count">%1$d/мл</string>
    <string name="grade">ГРЕЙД</string>
    <string name="know_grade">Узнать Грейд</string>
    <string name="l_count">%1$d/л</string>
    <string name="gl_count">%1$d г/л</string>
    <string name="calculate_dose">Расчитать дозировку</string>
    <string name="recommended_dose">РЕКОМЕНДУЕМАЯ ДОЗИРОВКА</string>
    <string name="treatment_params">ПАРАМЕТРЫ ЛЕЧЕНИЯ</string>
    <string name="choose_treatment_dose">Выберите дозу препарата</string>
    <string name="next_reception">Следующий прием</string>
    <string name="dosage">Дозировка</string>
    <string name="confirm_appointment">Подтвердить назначение</string>
    <string name="control">Упавление терапией</string>
    <string name="control.start">1. Старт</string>
    <string name="control.monitoring">2. Мониторинг</string>
    <string name="control.optimization">3. Оптимизация</string>
    <string name="instruction">Краткая инструкция</string>
    <string name="control.start.info">Комбинированной терапии препаратом ИБРАНСА</string>
    <string name="control.start.count">Для пациентов с HR+/HER2- мРМЖ ИБРАНСА®: принимается внутрь 1 раз в сутки</string>
    <string name="control.start.recommendation">Рекомендации по приему</string>
    <string name="control.start.recommendation.eat">Препарат ИБРАНСА® следует принимать во время еды. Необходимо принимать препарат примерно в одинаковое время каждый день</string>
    <string name="control.start.recommendation.time">При развитии рвоты или пропуске дозы не следует принимать дополнительную дозу препарата, прием следующей дозы должен состояться в обычное для нее время</string>
    <string name="control.start.recommendation.take">Капсулы ИБРАНСА® необходимо глотать целиком (пациенты не должны жевать, или открывать их перед проглатыванием). Капсулы нельзя принимать, если их целостность нарушена</string>
    <string name="control.start.recommendation.problem_1">Необходимо учитывать риск лекарственного взаимодействия при одновременном приеме с сильными индукторами или ингибиторами изофермента CYP3A</string>
    <string name="control.start.recommendation.problem_2">— Если нельзя избежать применения сильного ингибитора изофермента CYP3A, следует снизить дозу ИБРАНСА®  до 75 мг один раз в сутки</string>
    <string name="control.start.recommendation.problem_3">— Если применение мощного ингибитора изофермента CYP3A прекращено, то по истечении 3–5 периодов его полувыведения дозу препарата Ибранса следует увеличить до начальной (применявшейся до начала приема мощного ингибитора изофермента CYP3A)</string>
    <string name="control.start.recommendation.problem_4">— Пациенты должны избегать употребления грейпфрутов или грейпфрутового сока в период лечения препаратом ИБРАНСА®</string>
    <string name="monitoring.info">Своевременный мониторинг показателей крови управлять потенциальными побочными эффектами</string>
    <string name="monitoring.common">Общий анализ крови (ОАК) назначается перед стартом терапии препаратом ИБРАНСА® и в начале каждого цикла.</string>
    <string name="monitoring.monitoring_oak">Мониторинг ОАК проводится на 14 день во время первых двух циклов и в случае возникновения клинических показаний.</string>
    <string name="monitoring.graph">При составлении графика мониторинга важно учесть, когда пациент фактически получает препарат и начинает каждый цикл.</string>
    <string name="monitoring.blood_index">На чем основан регулярный контроль показателей крови:</string>
    <string name="monitoring.median">Медиана времени до первого эпизода нейтропении любой степени тяжести</string>
    <string name="monitoring.average">Средняя длительность нейтропении степени≥3</string>
    <string name="monitoring.item_1" formatted="false">Нейтропения являлась наиболее часто отмечаемым нежелательным явлением в исследовании PALOMA-3 (81%). Нейтропения степени ≥3 отмечалась у 65% пациентов, получающих ИБРАНСА® + фулвестрант</string>
    <string name="monitoring.item_2">Для пациентов, у которых развилась нейтропения степени 3 или 4, рекомендовано временное прекращение приема препарата, снижение дозы или отложенное начало следующего цикла терапии.</string>
    <string name="monitoring.item_3" formatted="false">Фебрильная нейтропения отмечалась у менее 1% пациентов, получающих ИБРАНСА®</string>
    <string name="monitoring.item_4">Пациентам нужно рекомендовать немедленно сообщать о любых признаках ухудшения состояния или инфекции, таких как лихорадка, озноб, головокружение, одышка, слабость или любая склонность к кровотечению и/или к образованию гематом</string>
    <string name="optimization.info">Может потребоваться оптимизация терапии в зависимости от индивидуальной чувствительности и переносимости</string>
    <string name="optimization.correction">Коррекция режима дозирования позволяет контролировать основные побочные эффекты терапии</string>
    <string name="optimization.toxic">Гематологическая токсичность</string>
    <string name="optimization.neitpor_3">Нейтропения 3-й степени</string>
    <string name="optimization.day_1">1 ДЕНЬ ЦИКЛА:</string>
    <string name="optimization.day_1.item_1">ОТЛОЖИТЬ ПРИЕМ ИБРАНСА® и повторить ОАК в течение 1 недели</string>
    <string name="optimization.day_1.item_2">НАЧАТЬ новый цикл с той же дозы после восстановления до степени ≤2</string>
    <string name="optimization.day_14">14 ДЕНЬ ПЕРВЫХ 2х ЦИКЛОВ:</string>
    <string name="optimization.day_14.item_1">ПРОДОЛЖИТЬ ПРИЕМ ИБРАНСА® в текущей дозе до завершения цикла. Повторить ОАК на 21 день</string>
    <string name="optimization.less_dose">СНИЗИТЬ ДОЗУ при появлении</string>
    <string name="optimization.less_dose.item_1">нейтропении 4-й степени в контрольном ОАК на 21 день цикла</string>
    <string name="optimization.less_dose.item_2">нейтропении 3-й степени повторно в следующих циклах.</string>
    <string name="optimization.neitrop_3_temp">Нейтропения 3-й степени c повышением температуры ≥38.5° C и/или инфекций; или нейтропения 4-й степени</string>
    <string name="optimization.any_step">НА ЛЮБОМ ЭТАПЕ МОНИТОРИНГА:</string>
    <string name="monday">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wednesday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="friday">ПТ</string>
    <string name="saturday">СБ</string>
    <string name="sunday">ВС</string>
    <string name="cycle">ЦИКЛ</string>
</resources>