<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.mbg.palbociclib.activities.AppointmentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oak_data"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/leukocytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="number"
                android:hint="@string/leukocytes"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/neutrophilis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="number"
                android:hint="@string/neutrophils"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/platelets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="number"
                android:hint="@string/platelets"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="10"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/fever"/>

            <Switch
                android:id="@+id/fever"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/assign_next_oak"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/assign_next_oak"/>

        <LinearLayout
            android:id="@+id/date_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/date_selector_text"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/next_treatment_date"/>

            <TextView
                android:id="@+id/date_selector_value"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/select_date"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/select_lower_dose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/consider_lowering_dose" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/dose125"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="125 мг" />

                <RadioButton
                    android:id="@+id/dose100"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="100 мг" />

                <RadioButton
                    android:id="@+id/dose75"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="75 мг" />
            </RadioGroup>

        </LinearLayout>


        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp"
            android:background="@drawable/round_button"
            app:backgroundTint="#f55969"
            android:enabled="false"
            android:text="@string/save_oak"/>

    </LinearLayout>

</ScrollView>
